--- a/views/users/shoplist.ejs
+++ b/views/users/shoplist.ejs
@@ -128,7 +128,7 @@
                     <!-- End .product-price -->
                     <div class="ratings-container">
                       <div class="ratings">
-                        <div class="ratings-val" style="width: 80%"></div>
+                        <div class="ratings-val" style="<%=(product[0].rating / 5) * 100 %> %"></div>
                         <!-- End .ratings-val -->
                       </div>
                       <!-- End .ratings -->
