--- a/views/admin/add-banner.ejs
+++ b/views/admin/add-banner.ejs
@@ -30,7 +30,7 @@
             <div class="form-group">
               <label class="col-md-12">Images</label>
               <div class="col-md-12">
-                <input type="file" placeholder="" name="image" required>
+                <input type="file" placeholder="" name="image" required multiple>
               </div>
             </div>
 
