--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -42,7 +42,7 @@
               <div class="form-group">
                 <label class="col-md-12">Image</label>
                 <div class="col-md-12">
-                  <input type="file" placeholder="" name="image">
+                  <input type="file" placeholder="" name="image" accept="image/png, image/gif, image/jpeg" multiple >
                 </div>
               </div>
               <div class="form-group">
