--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -122,8 +122,8 @@
                         <!-- End .card-title -->
 
                         <p>
-                          <%= user.firstname %><%= user.lastname %><br />
-
+                          <%= user.firstname %>
+                          <%= user.lastname %><br />
                           <%= user.streetAddress%><br />
                           <%= user.city%><br />
                           <%= user.country %><br />
