--- a/views/users/order-details.ejs
+++ b/views/users/order-details.ejs
@@ -34,7 +34,7 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-2">
-                    <img src="./productsImage/<%= order[i-1].productId.image %>" class="img-fluid" alt="Phone">
+                    <img src="./productsImage/<%= order[i-1].productId.image[0] %>" class="img-fluid" alt="Phone">
                   </div>
                   <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
                     <p class="text-muted mb-0"><%= order[i-1].productname %></p>
