--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -41,7 +41,7 @@
               <div class="form-group">
                 <label class="col-md-12">Images</label>
                 <div class="col-md-12">
-                  <input type="file" placeholder="" name="image" multiple>
+                  <input type="file" placeholder="" accept="image/png, image/gif, image/jpeg" name="image" multiple>
                 </div>
               </div>
 
