--- a/views/users/shoplist.ejs
+++ b/views/users/shoplist.ejs
@@ -93,7 +93,7 @@
                   <figure class="product-media">
                     <a href="/product?id=<%= productData[i-1]._id %>">
                       <% if(productData[i-1].image) { %>
-                      <img src="./productsImage/<%= productData[i-1].image %>" alt="Product image" class="product-image" />
+                      <img src="./productsImage/<%= productData[i-1].image[0] %>" alt="Product image" class="product-image" />
                       <% }else{ %> Image Not Found <% } %>
                     </a>
 
@@ -135,6 +135,19 @@
                       <span class="ratings-text">( )</span>
                     </div>
                     <!-- End .rating-container -->
+                    
+                   <div class="product-nav product-nav-thumbs">
+                     <a href="#" class="active">
+                     <img src="./productsImage/<%= productData[i-1].image[1] %>" alt="product desc">
+                      </a>
+                      <a href="#">
+                      <img src="./productsImage/<%= productData[i-1].image[2] %>" alt="product desc">
+                      </a>
+
+                       <a href="#">
+                     <img src="./productsImage/<%= productData[i-1].image[3] %>" alt="product desc">
+                       </a>
+                      </div><!-- End .product-nav -->
                   </div>
                   <!-- End .product-body -->
                 </div>
