--- a/views/partials/admin-footer.ejs
+++ b/views/partials/admin-footer.ejs
@@ -100,7 +100,24 @@
     })
 
   })
+
+  
 </script>
+<script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/buttons.html5.min.js"></script>
+    <script>
+        $(document).ready( function () {
+      $('#myTable').DataTable();
+  } );
+      </script>
+      <script>
+        $(document).ready(function () { $("#pdfTable").DataTable({ dom: "Bfrtip",
+        buttons: ["copyHtml5", "excelHtml5", "csvHtml5", "pdfHtml5"], }); });
+      </script>
 </body>
 
 </html>
